--- a/src/assets/i18n/core/en.json
+++ b/src/assets/i18n/core/en.json
@@ -1,7 +1,149 @@
 {
   "Menu": {
     "Administration": {
-      "Field": "Campos"
+      "home": "Administración",
+      "user": "Usuarios",
+      "field": "Indicadores",
+      "criterion": "Criterios",
+      "sandBox": "Caja de arena"
+    },
+    "Home": {
+      "home": "Inicio",
+      "institute": "Instituto"
+    },
+    "Institute": {
+      "home": "Mi instituto",
+      "test": "Cuestionario"
+    }
+  },
+  "Components": {
+    "Common": {
+      "Button": {
+        "complete": "Completar"
+      },
+      "Upload": {
+      },
+      "ViewFile": {
+        "title": "Visualización de archivo"
+      }
+    },
+    "Table": {
+      "perPage": "No. elementos por página",
+      "noData": "No se encontraron registro con el filtro: "
+    },
+    "Structure": {
+      "User": {
+        "title": "Gestión de usuarios",
+        "searchPlaceHolder": "Busca por nombre de usuario",
+        "id": "ID",
+        "userName": "Nombre de usuario",
+        "password": "Contraseña",
+        "secretKey": "Llave secreta",
+        "email": "Correo",
+        "active": "Estatus",
+        "ip": "IP",
+        "role": "Perfil",
+        "attention": "Atencion",
+        "activate": "Se va a activar el usuario ¿Desea continuar?",
+        "deactivate": "Se va a desactivar el usuario. ¿Desea continuar?",
+        "Modal": {
+          "title": "Datos del usuario",
+          "id": "ID",
+          "userName": "Nombre de usuario",
+          "password": "Contraseña",
+          "secretKey": "Llave secreta",
+          "email": "Correo",
+          "role": "Perfil"
+        }
+      },
+      "Field": {
+        "title": "Gestión de indicadores",
+        "searchPlaceHolder": "Busca por pregunta",
+        "idField": "ID",
+        "label": "Pregunta",
+        "name": "Nombre",
+        "score": "Puntaje",
+        "type": "Tipo",
+        "value": "Valor default",
+        "catalog": "Catalogo",
+        "evidence": "Evidencia",
+        "required": "Requerido",
+        "Modal": {
+          "title": "Datos de la pregunta",
+          "idField": "ID",
+          "label": "Pregunta",
+          "name": "Nombre",
+          "score": "Puntaje",
+          "type": "Tipo",
+          "value": "Valor default",
+          "catalog": "Catalogo",
+          "evidence": "Evidencia",
+          "required": "Requerido",
+          "scoreValue": "Valor puntaje"
+        }
+      },
+      "Criterion": {
+        "title": "Gestión de criterios",
+        "fields": "Campos",
+        "Modal": {
+          "title": "Datos del criterio",
+          "idCriterion": "ID",
+          "name": "Nombre"
+        },
+        "FieldModal": {
+          "title": "Criterio: ",
+          "idCriterion": "ID",
+          "name": "Nombre",
+          "idField": "ID",
+          "label": "Pregunta",
+          "score": "Puntaje",
+          "type": "Tipo",
+          "value": "Valor default",
+          "catalog": "Catalogo",
+          "evidence": "Evidencia"
+        }
+      },
+      "SandBox": {
+        "title": "Organiza tu formulario",
+        "CriterionModal": {
+          "title": "Criterios disponibles",
+          "name": "Nombre",
+          "count": "# Preguntas",
+          "searchPlaceHolder": "Busca por el nombre del criterio"
+        }
+      },
+      "Institute": {
+        "title": "Organiza tu formulario",
+        "subMenuInstitutes": "Ver institutos",
+        "subMenuCharts": "Estadisticas",
+        "Table": {
+          "title": "Institutos dados de alta",
+          "idCompany": "ID",
+          "name": "Nombre",
+          "admin": "Usuario administrador",
+          "test": "Cuestionario",
+          "searchPlaceHolder": "Busca por el nombre del criterio"
+        },
+        "Modal": {
+          "title": "Datos del instituto",
+          "idCompany": "ID",
+          "name": "Nombre",
+          "email": "Correo",
+          "admin": "Usuario administrador"
+        },
+        "Test": {
+          "title": "Cuestionario",
+          "idCompany": "ID",
+          "name": "Nombre",
+          "email": "Correo",
+          "admin": "Usuario administrador"
+        },
+        "Chart": {
+          "title": "Estadisticas",
+          "totalScore": "Puntaje máximo",
+          "totalFields": "No. preguntas"
+        }
+      }
     }
   }
 }
