Se agrega mejora al cuestionario, se coloca scroll spy Se cambia la versión de bootstrap a la 5

--- a/src/assets/i18n/core/en.json
+++ b/src/assets/i18n/core/en.json
@@ -68,6 +68,10 @@
       },
       "ViewFile": {
         "title": "Visualización de archivo"
+      },
+      "Labels": {
+        "totalAnswered": "Preguntas resueltas",
+        "totalScored": "Puntaje total"
       }
     },
     "Table": {
